--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-tour-of-heroes"
+    }
+  },
+  "defaultProject": "angular-tour-of-heroes",
+  "cli": {
+    "analytics": "d8958e7f-7255-44ee-8f96-d75b5d811b90"
+  }
 }
